2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-03-09	Antoine Lacroix <antoine.lacroix at sodern.fr>

	PR 1391/bsps
	* startup/spurious.c: Format was %d but had leading 0x.

2009-03-02	Daniel Hellstrom <daniel@gaisler.com>

	PR 1390/bsps
	* startup/linkcmds: Fix sections so C++ global constructors and
	destructors work with late model (>= 4.3) gcc versions.

2009-02-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/setvec.c: Change prototype of IDLE thread to consistently
	return void * and take a uintptr_t argument.

2008-12-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove -e start from %link.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am:
	* include/coverhd.h: Removed.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/ckinit.c: include "../../../shared/clockdrv_shell.h".
	* Makefile.am: Reflect changes above.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: bsp_cleanup() had the same code which was executed when
	you returned from boot_card() to start.S. So just use the stub