@@ -36,19 +36,18 @@ extern "C" {
 #include <rtems/console.h>
 
 /*
- *  confdefs.h overrides for this BSP:
- *   - two termios serial ports
- *   - Interrupt stack space is not minimum if defined.
+ *  BSP provides its own Idle thread body
  */
-
-#define CONFIGURE_NUMBER_OF_TERMIOS_PORTS 2
+void *bsp_idle_thread( uintptr_t ignored );
+#define BSP_IDLE_TASK_BODY bsp_idle_thread
 
 /*
  * Network driver configuration
  */
-
 struct rtems_bsdnet_ifconfig;
-extern int rtems_erc32_sonic_driver_attach (struct rtems_bsdnet_ifconfig *config);
+extern int rtems_erc32_sonic_driver_attach(
+  struct rtems_bsdnet_ifconfig *config
+);
 #define RTEMS_BSP_NETWORK_DRIVER_NAME	"sonic1"
 #define RTEMS_BSP_NETWORK_DRIVER_ATTACH	rtems_erc32_sonic_driver_attach
 
@@ -56,8 +55,7 @@ extern int rtems_erc32_sonic_driver_attach (struct rtems_bsdnet_ifconfig *config
  *  Simple spin delay in microsecond units for device drivers.
  *  This is very dependent on the clock speed of the target.
  */
-
-extern void Clock_delay(uint32_t         microseconds);
+extern void Clock_delay(uint32_t microseconds);
 
 #define delay( microseconds ) Clock_delay(microseconds)
 
