@@ -1,3 +1,10 @@
+2009-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* Makefile.am, include/bsp.h, startup/setvec.c: Split idle method into
+	its own file. Properly note to confdefs.h that this BSP has its own
+	idle thread.
+	* startup/bspidle.c: New file.
+
 2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
